# hearye

./: .gitignore  README.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  release.yml
scripts/: dev.sh  download-model.sh  sign-dev-binary.sh
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  enhance.rs  keychain.rs  lib.rs  main.rs  media.rs  native_stt.rs  paste.rs  settings.rs  state.rs  transcribe.rs
src/routes/: +page.svelte
src/routes/overlay/: +page.svelte
